--- a/templates/students_profile.html
+++ b/templates/students_profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Shards Dashboard Lite - Free Bootstrap Admin Template – DesignRevision</title>
+    <title>学生个体分析</title>
     <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -86,9 +86,8 @@
                         </div>
                       </div>
                       <div class="notification__content">
-                        <span class="notification__category">Analytics</span>
-                        <p>Your website’s active users count increased by
-                          <span class="text-success text-semibold">28%</span> in the last week. Great job!</p>
+                        <span class="notification__category">通知</span>
+                        <p>2019-2020学年期末成绩更新啦！</p>
                       </div>
                     </a>
                     <a class="dropdown-item" href="#">
@@ -98,18 +97,21 @@
                         </div>
                       </div>
                       <div class="notification__content">
-                        <span class="notification__category">Sales</span>
-                        <p>Last week your store’s sales count decreased by
-                          <span class="text-danger text-semibold">5.52%</span>. It could have been worse!</p>
+                        <span class="notification__category">建议</span>
+                        <p>点击此处查看网页使用建议</p>
                       </div>
                     </a>
-                    <a class="dropdown-item notification__all text-center" href="#"> View all Notifications </a>
+                    <a class="dropdown-item notification__all text-center" href="#"> 展开 </a>
                   </div>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <img class="user-avatar rounded-circle mr-2" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
                     <span class="d-none d-md-inline-block">丹妮老师</span>
+                  </a>
+                  <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                    <img class="user-avatar rounded-circle mr-2" >
+                    <a href = "http://13.75.45.244:8000/teacher_login/"><span class="d-none d-md-inline-block">登出</span></a>
                   </a>
 
                 </li>
@@ -259,48 +261,48 @@
                           <td> 93</td>
                           <td> 85</td>
                           <td> 52</td>
-			  <td> 230</td>	
-                          <td>  英语未及格</td>
+			                    <td> 230</td>	
+                          <td>  </td>
                         </tr>
                         <tr>
                           <td>本次班级均分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-		          <td> </td>	
+                          <td> 90 </td>
+                          <td> 92 </td>
+                          <td> 49 </td>
+                          <td> 231 </td>
+		                      <td> </td>	
                         </tr>
                         <tr>
                           <td>本次年级均分</td>
+                          <td> 88 </td>
+                          <td> 90 </td>
+                          <td> 51 </td>
+                          <td> 239  </td>
                           <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-<td> </td>
                         </tr>
                         <tr>
                           <td>上次考试分数</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-<td> </td>
+                          <td> 94 </td>
+                          <td> 86 </td>
+                          <td> 50 </td>
+                          <td> 230 </td>
+                          <td>  </td>
                         </tr>
           		<tr>
                           <td>上次班级均分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-<td> </td>
+                          <td> 92 </td>
+                          <td> 86 </td>
+                          <td> 52 </td>
+                          <td> 230 </td>
+                          <td>  </td>
                         </tr>
           		<tr>
-                          <td>上次年级俱焚</td>
+                          <td>上次年级均分</td>
+                          <td> 90</td>
+                          <td> 85 </td>
+                          <td> 53 </td>
+                          <td> 228 </td>
                           <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-<td> </td>
                         </tr>
 		      </tbody>
                     </table>
@@ -532,7 +534,7 @@
                           <th scope="col" class="border-0">听力</th>
                           <th scope="col" class="border-0">完形填空</th>
                           <th scope="col" class="border-0">阅读理解</th>
- 			  <th scope="col" class="border-0">作文</th>
+ 			                    <th scope="col" class="border-0">作文</th>
                           <th scope="col" class="border-0">总分</th>
                         </tr>
                       </thead>
@@ -542,24 +544,24 @@
                           <td> 23</td>
                           <td> 15</td>
                           <td> 22</td>
-			  <td> 30</td>	
+			                    <td> 30</td>	
                           <td> 90</td>
                         </tr>
                         <tr>
                           <td>本次班级均分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-		          <td> </td>	
+                          <td> 23</td>
+                          <td> 35</td>
+                          <td> 12</td>
+                          <td> 22 </td>
+                          <td> 92</td>	
                         </tr>
                         <tr>
                           <td>本次年级均分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-<td> </td>
+                          <td> 20 </td>
+                          <td> 30 </td>
+                          <td> 10 </td>
+                          <td> 20 </td>
+                          <td> 80 </td>
                         </tr>
                         
 		      </tbody>
