--- a/templates/Home_page_class_profile.html
+++ b/templates/Home_page_class_profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Shards Dashboard Lite - Free Bootstrap Admin Template – DesignRevision</title>
+    <title>分析主页</title>
     <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -86,9 +86,8 @@
                         </div>
                       </div>
                       <div class="notification__content">
-                        <span class="notification__category">Analytics</span>
-                        <p>Your website’s active users count increased by
-                          <span class="text-success text-semibold">28%</span> in the last week. Great job!</p>
+                        <span class="notification__category">通知</span>
+                        <p>2019-2020学年期末成绩更新啦！</p>
                       </div>
                     </a>
                     <a class="dropdown-item" href="#">
@@ -98,18 +97,21 @@
                         </div>
                       </div>
                       <div class="notification__content">
-                        <span class="notification__category">Sales</span>
-                        <p>Last week your store’s sales count decreased by
-                          <span class="text-danger text-semibold">5.52%</span>. It could have been worse!</p>
+                        <span class="notification__category">建议</span>
+                        <p>点击此处查看网页使用建议</p>
                       </div>
                     </a>
-                    <a class="dropdown-item notification__all text-center" href="#"> View all Notifications </a>
+                    <a class="dropdown-item notification__all text-center" href="#"> 展开 </a>
                   </div>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <img class="user-avatar rounded-circle mr-2" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
                     <span class="d-none d-md-inline-block">丹妮老师</span>
+                  </a>
+                  <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                    <img class="user-avatar rounded-circle mr-2" >
+                    <a href = "http://13.75.45.244:8000/teacher_login/"><span class="d-none d-md-inline-block">登出</span></a>
                   </a>
 
                 </li>
@@ -213,8 +215,6 @@
 	<td>
 	<h2><font size="5.5">选择考试科目：</font></h2>
 	<select name="drop2" class="ui-select">
-					<option value="0">语文</option>
-					<option value="1">数学</option>
 					<option value="2">英语</option>
 	</select>
 	</td>	
@@ -223,24 +223,14 @@
 	<h2><font size="5.5">选择年级班级：</font></h2>
 	<select name="drop3" class="ui-select">
 					<option value="0">初一1班</option>
-					<option value="1">初一2班</option>
-					<option value="2">初一3班</option>
-					<option value="2">初二1班</option>
-					<option value="2">初二2班</option>
-					<option value="2">初二3班</option>
-					<option value="2">初三1班</option>
-					<option value="2">初三2班</option>
-					<option value="2">初三3班</option>
 	</select>
 	</td>
 	<td>
 	<h2><font size="5.5">选择考试时间：</font></h2>
 	<select name="drop1" class="ui-select" index=40px>
-					<option value="0">2019春季学期入学考试</option>
-					<option value="1">2019春季学期期中测试</option>
-					<option value="2">2019春季学期期末测试</option>		</select>
+          <option value="0">2019春季学期入学考试</option>
+        	</select>
 	</td>
-
 	<td>
 				<input type="submit" value="确定" />
 	</td></tr></table></form></div></div>
@@ -288,64 +278,37 @@
                         </tr>
                         <tr>
                           <td>班级 - 最高分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                        </tr>
-                        <tr>
-                          <td>班级 - 中位数</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
+                          <td> 30</td>
+                          <td> 42 </td>
+                          <td> 21 </td>
+                          <td> 30</td>
+                          <td> 126 </td>
                           <td> </td>
                         </tr>
                         <tr>
                           <td>班级 - 最低分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
+                          <td> 6</td>
+                          <td> 7</td>
+                          <td> 4</td>
+                          <td> 10</td>
+                          <td> 27 </td>
                         </tr>
-          		<tr>
+          		          <tr>
                           <td>年级 - 平均分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
+                          <td>20 </td>
+                          <td> 30 </td>
+                          <td> 10</td>
+                          <td> 20 </td>
+                          <td> 80 </td>
                           <td> </td>
                         </tr>
-          		<tr>
+          		          <tr>
                           <td>年级 - 最高分</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                        </tr>
-			<tr>
-                          <td>年级 - 中位数</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                        </tr>
-			<tr>
-                          <td>年级 - 中位数</td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
-                          <td> </td>
+                          <td> 40 </td>
+                          <td> 50 </td>
+                          <td> 30 </td>
+                          <td> 30</td>
+                          <td> 150 </td>
                           <td> </td>
                         </tr>
                       </tbody>
@@ -385,8 +348,8 @@
         type: 'value'
     },
     series: [{
-        data: [2, 4, 5, 3, 0],
-        type: 'line',
+        data: [5, 18, 25, 12, 2],
+        type: 'bar',
         smooth: true
     }]
 };
@@ -532,7 +495,7 @@
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议一：</a>
                         </div>
-                        <p class="m-0 my-1 mb-2 text-muted">本班xxx科目平均分高／低／等于年级平均分。</p>
+                        <p class="m-0 my-1 mb-2 text-muted">本班英语科目平均分高于年级平均分。</p>
                                              </div>
                     </div>
                     <div class="blog-comments__item d-flex p-3">
@@ -542,7 +505,7 @@
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议二：</a>
                         </div>
-                        <p class="m-0 my-1 mb-2 text-muted">最好的模块为：xxx, 最差的模块为：xxx。</p>
+                        <p class="m-0 my-1 mb-2 text-muted">最好的模块为：完形填空, 最差的模块为：阅读理解。</p>
                                              </div>
                     </div>
                     <div class="blog-comments__item d-flex p-3">
@@ -552,7 +515,7 @@
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议三：</a>
                         </div>
-                        <p class="m-0 my-1 mb-2 text-muted">需要重点关注：xxx模块和xxx同学。</p>
+                        <p class="m-0 my-1 mb-2 text-muted">需要重点关注：阅读理解模块和林黛玉同学。</p>
                                               </div>
                     </div>
                   </div>
