--- a/templates/grades_upload.html
+++ b/templates/grades_upload.html
@@ -422,17 +422,18 @@ body {
 		<div class="body" id="drop">
 			<i class="fa fa-file-text-o pointer-none" aria-hidden="true"></i>
 <div class="profile"><img src="http://13.75.45.244:8000/static/images/upload_grades_page/3.jpg" alt="profile1" width='100' hight='100'></div>
-			<p class="pointer-none"><b>拖放到这里</b> files here <br /> or <a href="" id="triggerFile">从本地选择文件</a>开始上传</p>
+      <p class="pointer-none"><b>拖放到这里</b>  <br /> 或 <a href="" id="triggerFile">从本地选择文件</a>开始上传</p>
+      <a href="http://13.75.45.244:8000/select_page/">返回</a>
 			<input type="file" multiple="multiple" />
 		</div>
 		<footer>
 			<div class="divider">
-				<span><AR>FILES</AR></span>
+				<span><AR>文件</AR></span>
 			</div>
 			<div class="list-files">
 				<!--   template   -->
 			</div>
-			<button class="importar">UPDATE FILES</button>
+			<button class="importar">上传文件</button>
 		</footer>
 	</div>
 </div>
