--- a/templates/Home_page_class_profile.html
+++ b/templates/Home_page_class_profile.html
@@ -53,6 +53,12 @@
                   <span>学生个体分析</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="http://13.75.45.244:8000/">
+                  <i class="material-icons">vertical_split</i>
+                  <span>登出</span>
+                </a>
+              </li>
             </ul>
           </div>
         </aside>
@@ -109,11 +115,6 @@
                     <img class="user-avatar rounded-circle mr-2" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
                     <span class="d-none d-md-inline-block">丹妮老师</span>
                   </a>
-                  <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                    <img class="user-avatar rounded-circle mr-2" >
-                    <a href = "http://13.75.45.244:8000/teacher_login/"><span class="d-none d-md-inline-block">登出</span></a>
-                  </a>
-
                 </li>
               </ul>
               <nav class="nav">
