--- a/templates/grades_upload.html
+++ b/templates/grades_upload.html
@@ -422,8 +422,9 @@ body {
 		<div class="body" id="drop">
 			<i class="fa fa-file-text-o pointer-none" aria-hidden="true"></i>
 <div class="profile"><img src="http://13.75.45.244:8000/static/images/upload_grades_page/3.jpg" alt="profile1" width='100' hight='100'></div>
-      <p class="pointer-none"><b>拖放到这里</b>  <br /> 或 <a href="" id="triggerFile">从本地选择文件</a>开始上传<br /><a href=""http://13.75.45.244:8000/select_page/"" >返回</a></p>
-			<input type="file" multiple="multiple" />
+      <p class="pointer-none"><b>拖放到这里</b>  <br /> 或 <a href="" id="triggerFile">从本地选择文件</a>开始上传<br /></p>
+      <input type="file" multiple="multiple" />
+      <p text-align:center ><a href=""http://13.75.45.244:8000/select_page/"" >返回</a></p>p>
 		</div>
 		<footer>
 			<div class="divider">
