--- a/templates/students_profile.html
+++ b/templates/students_profile.html
@@ -1,134 +1,133 @@
+
 <!doctype html>
 <html class="no-js h-100" lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>学生个体分析</title>
-    <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="http://13.75.45.244:8000/static/css/main_analyze_profile_pages/shards-dashboards.1.1.0.min.css">
-    <link rel="stylesheet" href="http://13.75.45.244:8000/static/css/main_analyze_profile_pages/styles/extras.1.1.0.min.css">
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="http://13.75.45.244:8000/static/js/main_analyze_profile_pages/echarts.min.js"></script>
-  </head>
-  <body class="h-100">
-            <!-- Main Sidebar -->
-        <aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0">
-          <div class="main-navbar">
-            <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
-              <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
-                <div class="d-table m-auto">
-                  <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/shards-dashboards-logo.svg" alt="Shards Dashboard">
-                  <span class="d-none d-md-inline ml-1">“智慧班主任”平台</span>
-                </div>
-              </a>
-              <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
-                <i class="material-icons">&#xE5C4;</i>
-              </a>
-            </nav>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>分析主页</title>
+<meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="http://13.75.45.244:8000/static/css/main_analyze_profile_pages/shards-dashboards.1.1.0.min.css">
+<link rel="stylesheet" href="http://13.75.45.244:8000/static/css/main_analyze_profile_pages/extras.1.1.0.min.css">
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+<script src="http://13.75.45.244:8000/static/js/main_analyze_profile_pages/echarts.min.js"></script>
+</head>
+<body class="h-100">
+<!-- Main Sidebar -->
+<aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0">
+<div class="main-navbar">
+  <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
+    <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
+      <div class="d-table m-auto">
+        <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/shards-dashboards-logo.svg" alt="Shards Dashboard">
+        <span class="d-none d-md-inline ml-1">“智慧班主任”平台</span>
+      </div>
+    </a>
+    <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
+      <i class="material-icons">&#xE5C4;</i>
+    </a>
+  </nav>
+</div>
+<form action="#" class="main-sidebar__search w-100 border-right d-sm-flex d-md-none d-lg-none">
+  <div class="input-group input-group-seamless ml-3">
+    <div class="input-group-prepend">
+      <div class="input-group-text">
+        <i class="fas fa-search"></i>
+      </div>
+    </div>
+    <input class="navbar-search form-control" type="text" placeholder="搜索..." aria-label="Search"> </div>
+</form>
+<div class="nav-wrapper">
+  <ul class="nav flex-column">
+    <li class="nav-item">
+      <a class="nav-link " href="http://13.75.45.244:8000/Home_page_class_profile">
+        <i class="material-icons">edit</i>
+        <span>班级整体分析</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="#">
+        <i class="material-icons">vertical_split</i>
+        <span>学生个体分析</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="http://13.75.45.244:8000/">
+        <i class="material-icons">vertical_split</i>
+        <span>登出</span>
+      </a>
+    </li>
+  </ul>
+</div>
+</aside>
+<!-- End Main Sidebar -->
+<main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
+<div class="main-navbar sticky-top bg-white">
+  <!-- Main Navbar -->
+  <nav class="navbar align-items-stretch navbar-light flex-md-nowrap p-0">
+    <form action="#" class="main-navbar__search w-100 d-none d-md-flex d-lg-flex">
+      <div class="input-group input-group-seamless ml-3">
+        <div class="input-group-prepend">
+          <div class="input-group-text">
+            <i class="fas fa-search"></i>
           </div>
-          <form action="#" class="main-sidebar__search w-100 border-right d-sm-flex d-md-none d-lg-none">
-            <div class="input-group input-group-seamless ml-3">
-              <div class="input-group-prepend">
-                <div class="input-group-text">
-                  <i class="fas fa-search"></i>
-                </div>
+        </div>
+        <input class="navbar-search form-control" type="text" placeholder="搜索" aria-label="Search"> </div>
+    </form>
+    <ul class="navbar-nav border-left flex-row ">
+      <li class="nav-item border-right dropdown notifications">
+        <a class="nav-link nav-link-icon text-center" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="nav-link-icon__wrapper">
+            <i class="material-icons">&#xE7F4;</i>
+            <span class="badge badge-pill badge-danger">2</span>
+          </div>
+        </a>
+        <div class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="#">
+            <div class="notification__icon-wrapper">
+              <div class="notification__icon">
+                <i class="material-icons">&#xE6E1;</i>
               </div>
-              <input class="navbar-search form-control" type="text" placeholder="Search for something..." aria-label="Search"> </div>
-          </form>
-          <div class="nav-wrapper">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link " href="http://13.75.45.244:8000/Home_page_class_profile">
-                  <i class="material-icons">edit</i>
-                  <span>班级整体分析</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">
-                  <i class="material-icons">vertical_split</i>
-                  <span>学生个体分析</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="http://13.75.45.244:8000/">
-                  <i class="material-icons">vertical_split</i>
-                  <span>登出</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </aside>
-        <!-- End Main Sidebar -->
-         <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
-          <div class="main-navbar sticky-top bg-white">
-            <!-- Main Navbar -->
-            <nav class="navbar align-items-stretch navbar-light flex-md-nowrap p-0">
-              <form action="#" class="main-navbar__search w-100 d-none d-md-flex d-lg-flex">
-                <div class="input-group input-group-seamless ml-3">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <i class="fas fa-search"></i>
-                    </div>
-                  </div>
-                  <input class="navbar-search form-control" type="text" placeholder="搜索" aria-label="Search"> </div>
-              </form>
-              <ul class="navbar-nav border-left flex-row ">
-                <li class="nav-item border-right dropdown notifications">
-                  <a class="nav-link nav-link-icon text-center" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <div class="nav-link-icon__wrapper">
-                      <i class="material-icons">&#xE7F4;</i>
-                      <span class="badge badge-pill badge-danger">2</span>
-                    </div>
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE6E1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">通知</span>
-                        <p>2019-2020学年期末成绩更新啦！</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE8D1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">建议</span>
-                        <p>点击此处查看网页使用建议</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item notification__all text-center" href="#"> 展开 </a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                    <img class="user-avatar rounded-circle mr-2" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
-                    <span class="d-none d-md-inline-block">丹妮老师</span>
-                  </a>
-
-                </li>
-              </ul>
-              <nav class="nav">
-                <a href="#" class="nav-link nav-link-icon toggle-sidebar d-md-inline d-lg-none text-center border-left" data-toggle="collapse" data-target=".header-navbar" aria-expanded="false" aria-controls="header-navbar">
-                  <i class="material-icons">&#xE5D2;</i>
-                </a>
-              </nav>
-            </nav>
-          </div>
-          <!-- / .main-navbar -->
-          <div class="main-content-container container-fluid px-4">
-            
-	  
+            </div>
+            <div class="notification__content">
+              <span class="notification__category">通知</span>
+              <p>2019-2020学年期末成绩更新啦！</p>
+            </div>
+          </a>
+          <a class="dropdown-item" href="#">
+            <div class="notification__icon-wrapper">
+              <div class="notification__icon">
+                <i class="material-icons">&#xE8D1;</i>
+              </div>
+            </div>
+            <div class="notification__content">
+              <span class="notification__category">建议</span>
+              <p>点击此处查看网页使用建议</p>
+            </div>
+          </a>
+          <a class="dropdown-item notification__all text-center" href="#"> 展开 </a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+          <img class="user-avatar rounded-circle mr-2" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
+          <span class="d-none d-md-inline-block">丹妮老师</span>
+        </a>
+      </li>
+    </ul>
+    <nav class="nav">
+      <a href="#" class="nav-link nav-link-icon toggle-sidebar d-md-inline d-lg-none text-center border-left" data-toggle="collapse" data-target=".header-navbar" aria-expanded="false" aria-controls="header-navbar">
+        <i class="material-icons">&#xE5D2;</i>
+      </a>
+    </nav>
+  </nav>
+</div>
+<!-- / .main-navbar -->
+<div class="main-content-container container-fluid px-4">
+                   
 <!-- Page Header -->
             <div class="page-header row no-gutters py-4">
               <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
@@ -218,9 +217,7 @@
 	<td>
 	<h2><font size="5.5">请选择考试：</font></h2>
 	<select name="drop1" class="ui-select" index=40px>
-					<option value="0">2019春季学期入学考试</option>
-					<option value="1">2019春季学期期中测试</option>
-					<option value="2">2019春季学期期末测试</option>		</select>
+					<option value="0">2019春季学期入学考试</option>	</select>
 	</td>
 
 	<td>
@@ -499,9 +496,7 @@
 	<td>
 	<h2><font size="5.5">请选择科目：</font></h2>
 	<select name="drop1" class="ui-select" index=40px>
-					<option value="0">语文</option>
-					<option value="1">数学</option>
-					<option value="2">英语</option>		</select>
+					<option value="0">英语</option>		</select>
 	</td>
 
 	<td>
