--- a/templates/main.html
+++ b/templates/main.html
@@ -48,9 +48,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>教师辅助</h1>
-      <h5 class="w3-padding-32">锄禾日当午汗滴禾下土谁之盘中餐粒粒皆辛苦</h5>
+      <h5 class="w3-padding-32"></h5>
 
-      <p class="w3-text-grey">苏子愀然，正襟危坐，而问客曰：“何为其然也？”客曰：“月明星稀，乌鹊南飞，此非曹孟德之诗乎？西望夏口，东望武昌。山川相缪，郁乎苍苍；此非孟德之困于周郎者乎？方其破荆州，下江陵，顺流而东也，舳舻千里，旌旗蔽空，酾酒临江，横槊赋诗；固一世之雄也，而今安在哉？况吾与子，渔樵于江渚之上，侣鱼虾而友糜鹿，驾一叶之扁舟，举匏樽以相属；寄蜉蝣与天地，渺沧海之一粟。哀吾生之须臾，羡长江之无穷；挟飞仙以遨游，抱明月而长终；知不可乎骤得，托遗响于悲风。”</p>
+      <p class="w3-text-grey">通过公共治理结构改革，国家和地方设立创新项目和特殊岗位时，要引入具有创造力和执行力的思想家、实践者，打通高等教育和基础教育的制度分界线，在农村合理布局高校，打通高校教师、中小学乡村教师和外部民间力量之间的壁垒。</p>
     </div>
 
     <div class="w3-third w3-center">
@@ -68,9 +68,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
       <h1>学生助手</h1>
-      <h5 class="w3-padding-32">啦啦啦啦啦啦啦啦啦啦啦啦啦</h5>
+      <h5 class="w3-padding-32"></h5>
 
-      <p class="w3-text-grey">是岁十月之望，步自雪堂，将归于临皋。二客从予过黄泥之坂。霜露既降，木叶尽脱，人影在地，仰见明月，顾而乐之，行歌相答。已而叹曰：“有客无酒，有酒无肴，月白风清，如此良夜何！”客曰：“今者薄暮，举网得鱼，巨口细鳞，状如松江之鲈。顾安所得酒乎？”归而谋诸妇。妇曰：“我有斗酒，藏之久矣，以待子不时之需。”于是携酒与鱼，复游于赤壁之下。江流有声，断岸千尺；山高月小，水落石出。曾日月之几何，而江山不可复识矣。予乃摄衣而上，履谗①岩，披蒙茸，踞虎豹，登虬龙，攀栖鹘之危巢，俯冯夷之幽宫。盖二客不能从焉。划然长啸，草木震动，山鸣谷应，风起水涌。予亦悄然而悲，肃然而恐，凛乎其不可留也。反而登舟，放乎中流，听其所止而休焉。时夜将半，四顾寂寥。适有孤鹤，横江东来。翅如车轮，玄裳缟衣，戛然长鸣，掠予舟而西也。</p>
+      <p class="w3-text-grey">通常所说的教育，都是指校园教育，具有通用的区域或国家标准教材，有指定的教师，进行课堂口授讲述，辅之以板书和作业，结合测验、抽查考试、期中和期末考试，加上升学考试，再进入职业生涯。在信息化发达的今天，先进的教育，已不会再用私塾和一对一这样的落后的、高成本的、低效率的教育手段了！互动、快乐、学校指定和学生自选课程等都是比较先进的教育技术手段，至于案例教学，则是职业教育中比较成功的手段。借助信息化，把教育中可能遇到的种种技术和管理问题，更加精确地描述，让更多的人才在先进的教育技术条件下，更快的、更多的、一生学习接受科学知识和物质财富。</p>
     </div>
   </div>
 </div>
