--- a/templates/Home_page_class_profile.html
+++ b/templates/Home_page_class_profile.html
@@ -22,7 +22,7 @@
               <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
                 <div class="d-table m-auto">
                   <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/shards-dashboards-logo.svg" alt="Shards Dashboard">
-                  <span class="d-none d-md-inline ml-1">“智慧班主任”平台</span>
+                  <span class="d-none d-md-inline ml-1">成绩分析助手</span>
                 </div>
               </a>
               <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
