--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 <form>
-  <h1>教师个人登陆</h1>
+  <h1>教师个人登录</h1>
   <div class="inset">
   <p>
     <label for="email">用户名</label>
@@ -26,7 +26,7 @@
   </p>
   </div>
   <p class="p-container">
-    <span>忘记密码了？                                 </span><a href="http://13.75.45.244:8000/select_page/">登陆</a>
+    <span>忘记密码了？                                 </span><a href="http://13.75.45.244:8000/select_page/">登录</a>
   </p>
 </form>
 </html>
