--- a/templates/main.html
+++ b/templates/main.html
@@ -36,8 +36,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <header class="w3-display-container w3-content w3-wide" style="max-width:1800px;" id="home">
   <img src="http://13.75.45.244:8000/static/images/main/main_header.jpg" alt="Architecture" width="1800" height="900" class="w3-image w3-opacity-max">
   <div class="w3-display-middle w3-center">
-  <h1 class="w3-margin w3-jumbo">Utopya 智能乡村教师成绩分析助手</h1>
-  <p class="w3-xlarge"></p>
+  <h1 class="w3-margin w3-jumbo">Utopya</h1>
+  <p class="w3-xlarge">智能乡村教师成绩分析助手</p>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">了解更多</button>
   </div>
 </header>
