--- a/templates/students_profile.html
+++ b/templates/students_profile.html
@@ -131,7 +131,7 @@
 <!-- Page Header -->
             <div class="page-header row no-gutters py-4">
               <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
-                <span class="text-uppercase page-subtitle">-智慧班主任-</span>
+                <span class="text-uppercase page-subtitle">-村教助手-</span>
                 <h3 class="page-title">个人成绩档案及分析</h3>
               </div>
             </div>
