--- a/templates/Home_page_class_profile.html
+++ b/templates/Home_page_class_profile.html
@@ -131,7 +131,7 @@
 <!-- Page Header -->
             <div class="page-header row no-gutters py-4">
               <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
-                <span class="text-uppercase page-subtitle">-智慧班主任-</span>
+                <span class="text-uppercase page-subtitle">-村教助手-</span>
                 <h3 class="page-title">教学数据概况</h3>
               </div>
             </div>
@@ -252,7 +252,7 @@
               <div class="col">
                 <div class="card card-small mb-4">
                   <div class="card-header border-bottom">
-                    <h6 class="m-0">xxx班级xxx考试xx科目</h6>
+                    <h6 class="m-0">初一一班2019春季学期入学考试-英语</h6>
                   </div>
                   <div class="card-body p-0 pb-3 text-center">
                     <table class="table mb-0">
