--- a/templates/split.html
+++ b/templates/split.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <title>split</title>
-        <link rel="stylesheet" type="text/css" href="http://13.75.45.244:8000/static/css/select_page/split.css"/>
+        <link rel="stylesheet" type="text/css" href="http://www.utopya.tk:8000/static/css/select_page/split.css"/>
     </head>
 <div class="container">
 	<div id="splitlayout" class="splitlayout">
 		<div class="intro">
 			<div class="side side-left">
 				<div class="intro-content">
-					<div class="profile"><img  src="http://13.75.45.244:8000/static/images/select_page/1.jpg" alt="profile1"></div>
-					<h1><a href="http://13.75.45.244:8000/grades_upload/"><span >录入成绩 </span></a><span>将学生成绩录入系统中</span></h1>
+					<div class="profile"><img  src="http://www.utopya.tk:8000/static/images/select_page/1.jpg" alt="profile1"></div>
+					<h1><a href="http://www.utopya.tk:8000/grades_upload/"><span >录入成绩 </span></a><span>将学生成绩录入系统中</span></h1>
 				</div>
 				<div class="overlay"></div>
 			</div>
 			<div class="side side-right">
 				<div class="intro-content">
-					<div class="profile"><img  src="http://13.75.45.244:8000/static/images/select_page/2.jpg" alt="profile2"></div>
-					<h1><a href="http://13.75.45.244:8000/Home_page_class_profile/"><span >查看报告 </span></a><span>查看系统生成的分析报告</span></h1>
+					<div class="profile"><img  src="http://www.utopya.tk:8000/static/images/select_page/2.jpg" alt="profile2"></div>
+					<h1><a href="http://www.utopya.tk:8000/Home_page_class_profile/"><span >查看报告 </span></a><span>查看系统生成的分析报告</span></h1>
 				</div>
 				<div class="overlay"></div>
 			</div>
