--- a/templates/grades_upload.html
+++ b/templates/grades_upload.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>upload</title>
 
-<script src="http://13.75.45.244:8000/static/js/jquery.min.js"></script>
+<script src="http://www.utopya.tk:8000/static/js/jquery.min.js"></script>
 
 <style>
 html,
@@ -408,7 +408,7 @@ body {
 </head>
 <body>
 
-<link rel="stylesheet" href="http://13.75.45.244:8000/static/cdd/upload_grades_page/font-awesome.min.css" media="screen">
+<link rel="stylesheet" href="http://www.utopya.tk:8000/static/cdd/upload_grades_page/font-awesome.min.css" media="screen">
 
 <div class="upload">
 	<div class="upload-files">
@@ -421,10 +421,10 @@ body {
 		</header>
 		<div class="body" id="drop">
 			<i class="fa fa-file-text-o pointer-none" aria-hidden="true"></i>
-<div class="profile"><img src="http://13.75.45.244:8000/static/images/upload_grades_page/3.jpg" alt="profile1" width='100' hight='100'></div>
+<div class="profile"><img src="http://www.utopya.tk:8000/static/images/upload_grades_page/3.jpg" alt="profile1" width='100' hight='100'></div>
       <p class="pointer-none"><b>拖放到这里</b>  <br /> 或 <a href="" id="triggerFile">从本地选择文件</a>开始上传<br /></p>
       <input type="file" multiple="multiple" />
-      <p text-align:center ><a href="http://13.75.45.244:8000/select_page/" >返回</a></p>
+      <p text-align:center ><a href="http://www.utopya.tk:8000/select_page/" >返回</a></p>
 		</div>
 		<footer>
 			<div class="divider">
