--- a/templates/main.html
+++ b/templates/main.html
@@ -21,20 +21,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">主页</a>
-    <a href="http://13.75.45.244:8000/teacher_login/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">教师</a>
+    <a href="http://www.utopya.tk:8000/teacher_login/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">教师</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">学生</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="#" class="w3-bar-item w3-button w3-padding-large">主页</a>
-    <a href="http://13.75.45.244:8000/teacher_login/" class="w3-bar-item w3-button w3-padding-large">教师</a>
+    <a href="http://www.utopya.tk:8000/teacher_login/" class="w3-bar-item w3-button w3-padding-large">教师</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">学生</a>
   </div>
 </div>
 
 <header class="w3-display-container w3-content w3-wide" style="max-width:1800px;" id="home">
-  <img src="http://13.75.45.244:8000/static/images/main/main_header.jpg" alt="Architecture" width="1800" height="900" class="w3-image w3-opacity-max">
+  <img src="http://www.utopya.tk:8000/static/images/main/main_header.jpg" alt="Architecture" width="1800" height="900" class="w3-image w3-opacity-max">
   <div class="w3-display-middle w3-center">
   <h1 class="w3-margin w3-jumbo">Utopya</h1>
   <p class="w3-xlarge">智能乡村教师成绩分析助手</p>
