--- a/templates/students_profile.html
+++ b/templates/students_profile.html
@@ -10,10 +10,10 @@
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="http://13.75.45.244:8000/static/css/main_analyze_profile_pages/shards-dashboards.1.1.0.min.css">
-<link rel="stylesheet" href="http://13.75.45.244:8000/static/css/main_analyze_profile_pages/extras.1.1.0.min.css">
+<link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="http://www.utopya.tk:8000/static/css/main_analyze_profile_pages/shards-dashboards.1.1.0.min.css">
+<link rel="stylesheet" href="http://www.utopya.tk:8000/static/css/main_analyze_profile_pages/extras.1.1.0.min.css">
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-<script src="http://13.75.45.244:8000/static/js/main_analyze_profile_pages/echarts.min.js"></script>
+<script src="http://www.utopya.tk:8000/static/js/main_analyze_profile_pages/echarts.min.js"></script>
 </head>
 <body class="h-100">
 <!-- Main Sidebar -->
@@ -22,7 +22,7 @@
   <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
     <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
       <div class="d-table m-auto">
-        <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/shards-dashboards-logo.svg" alt="Shards Dashboard">
+        <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/shards-dashboards-logo.svg" alt="Shards Dashboard">
         <span class="d-none d-md-inline ml-1">成绩分析助手</span>
       </div>
     </a>
@@ -43,7 +43,7 @@
 <div class="nav-wrapper">
   <ul class="nav flex-column">
     <li class="nav-item">
-      <a class="nav-link " href="http://13.75.45.244:8000/Home_page_class_profile">
+      <a class="nav-link " href="http://www.utopya.tk:8000/Home_page_class_profile">
         <i class="material-icons">edit</i>
         <span>班级整体分析</span>
       </a>
@@ -55,7 +55,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="http://13.75.45.244:8000/">
+      <a class="nav-link active" href="http://www.utopya.tk:8000/">
         <i class="material-icons">vertical_split</i>
         <span>登出</span>
       </a>
@@ -113,7 +113,7 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-          <img class="user-avatar rounded-circle mr-2" src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
+          <img class="user-avatar rounded-circle mr-2" src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/0.jpg" alt="User Avatar">
           <span class="d-none d-md-inline-block">丹妮老师</span>
         </a>
       </li>
@@ -446,7 +446,7 @@
                   <div class="card-body p-0">
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__avatar mr-3">
-                        <img src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/1.jpg" alt="User avatar" /> </div>
+                        <img src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/1.jpg" alt="User avatar" /> </div>
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议一：</a>
@@ -456,7 +456,7 @@
                     </div>
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__avatar mr-3">
-                        <img src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/2.jpg" alt="User avatar" /> </div>
+                        <img src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/2.jpg" alt="User avatar" /> </div>
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议二：</a>
@@ -467,7 +467,7 @@
                     </div>
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__avatar mr-3">
-                        <img src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/3.jpg" alt="User avatar" /> </div>
+                        <img src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/3.jpg" alt="User avatar" /> </div>
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议三：</a>
@@ -646,7 +646,7 @@
                   <div class="card-body p-0">
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__avatar mr-3">
-                        <img src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/1.jpg" alt="User avatar" /> </div>
+                        <img src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/1.jpg" alt="User avatar" /> </div>
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议一：</a>
@@ -656,7 +656,7 @@
                     </div>
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__avatar mr-3">
-                        <img src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/2.jpg" alt="User avatar" /> </div>
+                        <img src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/2.jpg" alt="User avatar" /> </div>
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议二：</a>
@@ -667,7 +667,7 @@
                     </div>
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__avatar mr-3">
-                        <img src="http://13.75.45.244:8000/static/images/main_analyze_profile_pages/avatars/3.jpg" alt="User avatar" /> </div>
+                        <img src="http://www.utopya.tk:8000/static/images/main_analyze_profile_pages/avatars/3.jpg" alt="User avatar" /> </div>
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
                           <a class="text-secondary" href="#">建议三：</a>
